[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wfm-talkhead"
version = "1.0.0"
description = "Talking Head module for WiFi Marketing Content Toolkit (via SadTalker)"
requires-python = ">=3.10"
dependencies = [
    "wfm-shared",
    "click>=8.0",
    "rich>=13.0",
    "gradio>=5.0",
    "requests>=2.28",
]

[tool.setuptools]
packages = ["talkhead"]

[tool.setuptools.package-dir]
talkhead = "."
[project.scripts]
talkhead = "talkhead.cli:main"
