[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wfm-tts"
version = "1.0.0"
description = "Text-to-Speech module for WiFi Marketing Content Toolkit (via VietTTS)"
requires-python = ">=3.10"
dependencies = [
    "wfm-shared",
    "click>=8.0",
    "rich>=13.0",
    "gradio>=5.0",
    "requests>=2.28",
]

[tool.setuptools]
packages = ["tts"]

[tool.setuptools.package-dir]
tts = "."
[project.scripts]
tts = "tts.cli:main"
